# job-hunter

./: .env.example  .gitignore  .prettierignore  LICENSE  Makefile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/jobhunter/: __init__.py  main.py
apps/api/src/jobhunter/api/: __init__.py  health.py
apps/api/src/jobhunter/core/: __init__.py  config.py  context.py  logging.py  middleware.py
apps/api/src/jobhunter/domain/: __init__.py
apps/api/src/jobhunter/repositories/: __init__.py
apps/api/src/jobhunter/services/: __init__.py  health.py
apps/api/tests/: conftest.py  test_config.py  test_health.py  test_logging.py  test_sanity.py
apps/web/: .gitkeep
docs/architecture/: decisions.md
docs/pull-requests/: batch-01-foundation.md
infra/: README.md
infra/compose/: docker-compose.yml
infra/docker/: api.Dockerfile
scripts/: preflight.sh
